--- a/modules/client-base/distr/index.html
+++ b/modules/client-base/distr/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <!-- Head - start -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="<%=dstPackageJsonValues.description%>">
   <base href="/">
+  <!-- Head - end -->
 
   <style>
     html,
