--- a/modules/client-base/distr/index.html
+++ b/modules/client-base/distr/index.html
@@ -18,12 +18,12 @@
       background-color: #ededed;
     }
   </style>
-  <title><%=dstPackageJsonValues.name%></title>
+  <title><%=vars.appElementName%></title>
 </head>
 
 <body>
-  <<%=dstPackageJsonValues.name%>></<%=dstPackageJsonValues.name%>>
-  <script type="module" src="./src/<%=dstPackageJsonValues.name%>.js"></script>
+  <<%=vars.appElementName%>></<%=vars.appElementName%>>
+  <script type="module" src="./src/<%=vars.appElementName%>.js"></script>
 </body>
 
 </html>
